--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cryptr": "^6.2.0"
+    "cryptr": "^6.2.0",
+    "expres": "^0.0.5"
   }
 }
